fix overflow

--- a/yung_style.css
+++ b/yung_style.css
@@ -5,5 +5,6 @@ Date: February 6th
 
 body {
 	background-image:url("IMG_1407.JPG");
-	background-repeat: no-repeat;
+	background-repeat:no-repeat;
+	background-size:1570px 845px;
 }
